# MemoriaOS

./: .env.example  .gitignore  README.md  cloudbuild.yaml  code_standard.md  deploy.sh  docker-compose.yml  new_project_roadmap.md  package-lock.json  updates_ver4.md
backend/: Dockerfile  main.py  mypy.ini  pyproject.toml  ruff.toml
backend/agents/: loop.py  memory_weaver.py  query_agent.py  reel_generator.py  supervisor.py  ui_snipper.py
backend/config/: logging.py  prompts.py  settings.py
backend/integrations/: bigquery_store.py  cloud_storage.py  cloud_tts.py  google_photos.py  notion_store.py
backend/models/: extracted_data.py  finance.py  fitness.py  recipes.py  tasks.py  wellness.py
backend/prompts/: clarifier.txt  extract.txt  memory_weaver.txt  validator.txt
backend/tests/: test_streak.py
backend/tools/: compile_video.py  extract_structured_data.py  fetch_google_photos.py  generate_audio.py  query_bigquery.py  sync_notion.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/journal/: page.tsx
frontend/src/app/reels/: page.tsx
frontend/src/app/vault/: page.tsx
frontend/src/components/: AudioPlayer.tsx  Navigation.tsx  WaveformVisualizer.tsx
frontend/src/components/ui/: Toast.tsx
frontend/src/lib/: api.ts
infra/: main.tf  outputs.tf  variables.tf
